--- a/src/login.html
+++ b/src/login.html
@@ -20,8 +20,11 @@
       <input type="password" placeholder="Password">
       <br>
       <button>Login</button>
+      <hr>
+      <a href="./share.html?type=guest">Continue as guest</a>
       <br>
-      <a href="./register.html">I don't have an account</a>
+      <p>or</p>
+      <a href="./register.html">Register account</a>
     </div>
     <p class="info">eFurWeb v1.0.0</p>
   </body>
