--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <script src="./app.js" defer></script>
   </head>
   <body style="--post-width:600px">
-    <!--Loading screen-->
+    <!-- loading screen -->
     <img src="./res/paw.png" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 200px;">
     <a style="position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); color: rgb(0, 162, 255);" href="https://status.efurry.net">Server status</a>
   </body>
