Change the URL because my domain is gone :(

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script src="./lib/dompurify.js"></script>
     <script src="./lib/marked.js"></script>
     <script src="./lib/parse.js"></script>
-    <script src="./app.js" defer></script>
+    <script src="./app.js"></script>
   </head>
   <body style="--post-width:600px">
     <!-- loading screen -->
